--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -27,7 +27,7 @@ body{
 } 
 
 #Home{
-    background: url("Images\BgImg2.jpg");
+    background: url(Images\BgImg2.jpg);
     min-height: 100vh;
     background-position: center;
     background-size: cover;
