--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -4,10 +4,6 @@ body{
     overflow:scroll;
     font-family: 'Alegreya', serif;
     font-size: larger;
-    /*background-image: url(bgImg2.jpg);
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;*/
 }
 
 /*navbar*/
@@ -25,6 +21,21 @@ body{
     color: white;
    /* padding-left: 10px;*/
 } 
+
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 50px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+  color: white;
+}
+
+.fa:hover {
+  color: rgb(130, 129, 128);
+}
+
 
 #Home{
     background: url(../Images/BgImg2.jpg);
@@ -55,6 +66,43 @@ body{
     font-family: 'Merriweather', serif;
 }
 
+
+#row {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 4px;
+}
+
+/* Create four equal columns that sits next to each other */
+#column {
+  flex: 25%;
+  max-width: 25%;
+  padding: 0 4px;
+}
+
+#column img {
+  margin-top: 8px;
+  vertical-align: middle;
+  width: 100%;
+}
+
+/* Responsive layout - makes a two column-layout instead of four columns */
+@media screen and (max-width: 800px) {
+  #column {
+    flex: 50%;
+    max-width: 50%;
+  }
+}
+
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  #column {
+    flex: 100%;
+    max-width: 100%;
+  }
+}
+
+
 section {
   padding-top: 100px;
   padding-bottom: 100px;
@@ -69,8 +117,12 @@ h2{
 .paragraph{
     font-family: 'Kaushan Script', cursive;
 }
-#About img {
-  border-radius: 50%;
+.anchor:hover{
+  color: rgb(130, 129, 128);;
+}
+.about img {
+  width: 100%;
+  border-radius: 100%;
 }
 
 
@@ -85,8 +137,11 @@ h2{
 }
 .skills {
   text-align: right; /* Right-align text */
-  padding-top: 10px; /* Add top padding */
+  padding-top: 5px; /* Add top padding */
+  margin-top: 20px;
+  margin-bottom: 5px;
   color: white; /* White text color */
+  background-color: rgb(130, 129, 128);
 }
 
 .html {width: 80%; } 
@@ -112,14 +167,15 @@ h2{
 }
 .service button {
   color: white;
-  background-color: #000;
+  background-color: rgb(130, 129, 128);
   text-align: center;
   cursor: pointer;
   width: fit-content;
   font-size: 18px;
+  border: none;
 }
 .service a:hover {
-  opacity: 0.7;
+  color: black;
 }
 .service button a{
   color: white;
@@ -138,7 +194,7 @@ h2{
 }
 
 .card {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 0 4px 8px 0 rgb(130, 129, 128);
     max-width: 300px;
     margin: auto;
     text-align: center;
@@ -156,7 +212,7 @@ h2{
     outline: 0;
     padding: 12px;
     color: white;
-    background-color: #000;
+    background-color:rgb(130, 129, 128);;
     text-align: center;
     cursor: pointer;
     width: 100%;
@@ -164,7 +220,7 @@ h2{
   }
   
   .card a:hover {
-    opacity: 0.7;
+   color: #000;
   }
   .card p button a{
     color: white;
@@ -181,7 +237,7 @@ h2{
     font-size: 20px;   
 }         
 .stickyicon-list a:hover {   
-  color: #000;   
+  color: rgb(130, 129, 128);
   width:10px;   
 }   
   .ig {   
@@ -214,7 +270,7 @@ input[type=text], select, textarea {
   
   /* Style the submit button with a specific background color etc */
   input[type=submit] {
-    background-color: #000;
+    background-color: rgb(130, 129, 128);
     color: white;
     padding: 10px 15px;
     border: none;
@@ -224,7 +280,7 @@ input[type=text], select, textarea {
   
   /* When moving the mouse over the submit button, add a darker gray color */
   input[type=submit]:hover {
-    background-color: darkgray;
+    background-color: black;
   }
   
   /* Add a background color and some padding around the form */ 
@@ -232,7 +288,7 @@ input[type=text], select, textarea {
   
   /*.container {
     border-radius: 5px;
-    background-image: url(bgImg1.jpg);
+    background: url(../Images/BgImg1.jpg);
     padding: 20px;
   }*/
   
